2017-01-27         Rafael Fontenelle     <rafaelff@gnome.org>

	* POTFILES.in: Fix path of some files listed there so that
	update via commands like 'make gawk.pot-update' or
	'intltool-update <lang>' will work.

2017-01-27         Arnold D. Robbins     <arnold@skeeve.com>

	* LINGUAS: Updated with pt_BR.
	* pt_BR.po: Updated.

2016-08-25         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.4: Release tar ball made.

2016-02-22  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.19.7.
	* Rules-quot: Upgrade to gettext-0.19.7.

2015-05-19         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.3: Release tar ball made.

2015-04-29         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.2: Release tar ball made.

2015-01-24         Arnold D. Robbins     <arnold@skeeve.com>

	* POTFILES.in: Brought up to date.

2014-11-19  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.in.in: Upgrade to gettext-0.19.3.
	* Rules-quot: Upgrade to gettext-0.19.3.

2014-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.1: Release tar ball made.

2013-05-09         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.0: Release tar ball made.

2013-04-16         Arnold D. Robbins     <arnold@skeeve.com>

	* POTFILES.in: Brought up to date.

2012-12-24         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.2: Release tar ball made.

2012-07-25         Arnold D. Robbins     <arnold@skeeve.com>

	* POTFILES.in: Brought up to date.

2012-03-28         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.0.1: Release tar ball made.

2011-07-17         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.in.in (dist2): Remove README from list of files checked for
	manually. Added in main directory's Makefile.am EXTRA_DIST, per
	advice from Bruno Haible.

2011-06-23         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.in.in (dist2): Add README to list of files checked for
	manually.
	* 4.0.0: Remake the tar ball.
