@@ -1,5 +1,5 @@
 # List of source files containing translatable strings.
-# Copyright (C) 1999, 2002, 2012 Free Software Foundation, Inc.
+# Copyright (C) 1999, 2002, 2012, 2017 Free Software Foundation, Inc.
 
 array.c
 awkgram.c
@@ -7,7 +7,6 @@ builtin.c
 cint_array.c
 command.c
 debug.c
-support/dfa.c
 eval.c
 ext.c
 extension/filefuncs.c
@@ -29,8 +28,6 @@ field.c
 floatcomp.c
 gawkapi.c
 gawkmisc.c
-support/getopt.c
-support/getopt1.c
 int_array.c
 io.c
 main.c
@@ -39,13 +36,17 @@ msg.c
 node.c
 posix/gawkmisc.c
 profile.c
-support/random.c
 re.c
+replace.c
+str_array.c
+support/dfa.c
+support/getopt.c
+support/getopt1.c
+support/localeinfo.c
+support/random.c
 support/regcomp.c
 support/regex.c
 support/regex_internal.c
 support/regexec.c
-replace.c
-str_array.c
 symbol.c
 version.c
