@@ -1,3 +1,7 @@
+2017-02-01         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* POTFILES.in: Update list of files and sort it.
+
 2017-01-27         Rafael Fontenelle     <rafaelff@gnome.org>
 
 	* POTFILES.in: Fix path of some files listed there so that
